devops/walshsoft-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: walshsoft-pod
  labels:
    app: walshsoft-app
spec:
  restartPolicy: Always
  containers:
  - name: nginx
    image: gcr.io/walshsoft-218612/nginx:v9
    ports:
    - containerPort: 80
    readinessProbe:
      httpGet:
        path: /health
        port: 80
      initialDelaySeconds: 5
      timeoutSeconds: 5
  - name: web
    image: gcr.io/walshsoft-218612/web:v10
    command: ["gunicorn"]
    args: ["walshsoft.wsgi:application", "--bind", ":8000"]
