devops/walshsoft-service.yml
apiVersion: v1
kind: Service
metadata:
  name: walshsoft-service
spec:
  type: LoadBalancer  # Set to LoadBalancer when no SSL/ingress
  selector:
    app: walshsoft-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
