devops/walshsoft-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: walshsoft-ingress
spec:
  backend:
    serviceName: walshsoft-service
    servicePort: 80
  redinessProbe:
    httpGet:
        path: /health
